server/server/microservices/Authentication/auth-ms/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-ms
spec:
  selector:
    matchLabels:
      app: auth-ms
  template:
    metadata:
      labels:
        app: auth-ms
    spec:
      containers:
      - name: auth-ms
        image: git.ggtech.global:5050/ggtech/esports-cms/auth-ms
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
      imagePullSecrets:
        - name: regcred
