server/server/microservices/Authentication/auth-ms/k8s/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-ms-svc
spec:
  selector:
    app: auth-ms
  ports:
  - port: 80
    targetPort: 3000
